# ai-agent-tools

./: .gitignore  API.md  LICENSE  README.md  install.sh  tools.txt
asana-cli/: README.md  pyproject.toml
asana-cli/src/asana_cli/: client.py  config.py  main.py  rich_text.py
asana-cli/src/asana_cli/commands/: backup.py  comment.py  config_cmd.py  custom_field.py  project.py  section.py  tag.py  task.py  workspace.py
asana-cli/tests/: conftest.py  test_client.py  test_output.py  test_rich_text.py
asana-cli/tests/test_commands/: test_backup.py  test_comment.py  test_config.py  test_custom_field.py  test_project.py  test_section.py  test_tag.py  test_task.py
clickup-cli/: README.md  pyproject.toml
clickup-cli/src/clickup_cli/: client.py  config.py  main.py  output.py
clickup-cli/src/clickup_cli/commands/: comment.py  config_cmd.py  custom_field.py  folder.py  project.py  section.py  tag.py  task.py  workspace.py
